Fixes for IE8+ & FFox3.6+, SmartGWT sample, LazyMap & Index fixes